[package]
name = "arduino-ethernet-examples"
version = "0.1.0"
authors = ["Robert Forsman <thoth950@gmail.com>"]
edition = "2018"

[[bin]]
name = "web_server"
path = "src/web_server.rs"
#test = false
#bench = false

[[bin]]
name="web_client"
path = "src/web_client.rs"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "*"
ethernet={path="../ethernet"}

[dependencies.cstr_core]
#version="*"
git="https://github.com/mutantbob/cstr_core.git"
#path="../../../vendor/cstr_core"
default-features=false

[dependencies.rust-arduino-runtime]
#path="../../rust-arduino-helpers/rust-arduino-runtime"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="main"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
