[package]
name = "arduino-ethernet-examples"
version = "0.1.0"
authors = ["Robert Forsman <thoth950@gmail.com>"]
edition = "2018"

[[bin]]
name = "web_server"
path = "src/web_server.rs"
#test = false
#bench = false

[[bin]]
name="web_client"
path = "src/web_client.rs"

[dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
ethernet={path="../ethernet"}

[dependencies.cstr_core]
#version="*"
git="https://github.com/mutantbob/cstr_core.git"
#path="../../../vendor/cstr_core"
default-features=false

[dependencies.ufmt]
#version="*"
#path="../../../vendor/ufmt"
git="https://github.com/mrk-its/ufmt.git"
branch="ptr_width_16_fix"

[dependencies.rust-arduino-runtime]
#path="../../rust-arduino-helpers/rust-arduino-runtime"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="2022-mar-kludge"

[dependencies.arduino-hal]
#git = "https://github.com/rahix/avr-hal"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"
git = "https://github.com/mutantbob/avr-hal.git"
branch="2022-mar-ufmt-fix"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
