cargo-features = [ "resolver" ]

[package]
name = "arduino-ethernet-examples"
version = "0.1.0"
authors = ["Robert Forsman <thoth950@gmail.com>"]
edition = "2018"
resolver = "2"

[features]
atmega2560 = ["arduino-hal/arduino-mega2560", "ethernet/atmega2560"]
atmega328p = ["arduino-hal/arduino-uno", "ethernet/atmega328p"]

[[bin]]
name = "web_server"
path = "src/web_server.rs"
#test = false
#bench = false

[[bin]]
name="web_client"
path = "src/web_client.rs"

[dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
ufmt = "*"
cstr_core = { version="*", default-features=false }

ethernet={path="../ethernet"}

[dependencies.rust-arduino-runtime]
#path="../../rust-arduino-helpers/rust-arduino-runtime"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="2022-mar-kludge"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
#rev = "f84c0dff774c2292bc932b670955165161ecc7d1"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"


[patch.crates-io]
ufmt = { git = "https://github.com/mrk-its/ufmt.git", branch="ptr_width_16_fix" }
cty = { git="https://github.com/mutantbob/cty.git", branch="2022-Feb-avr" , default-features=false }
heapless = { git = "https://github.com/mutantbob/heapless.git" }
avr-progmem = { git="https://github.com/Cryptjar/avr-progmem-rs.git", branch="v0.3"}
