[package]
name = "ethernet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-hal-generic = {git="https://github.com/rahix/avr-hal", rev="f84c0dff774c2292bc932b670955165161ecc7d1"}
rust-arduino-helpers = { path="../../rust-arduino-helpers"}
rust-arduino-runtime = { path="../../rust-arduino-helpers/rust-arduino-runtime"}
ufmt = "*"
cstr_core = { path = "../../../vendor/cstr_core", default-features=false }
#cstr_core = { version="*", default-features = false }
cty = { path="../../../vendor/cty" }

[build-dependencies]
bindgen="*"
cc="*"
arduino-build-helpers = { path="../../rust-arduino-helpers/arduino-build-helpers"}

[lib]
#crate-type=["staticlib"]
#crate-type=["rlib"]
