[package]
name = "ethernet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avr-hal-generic = {git="https://github.com/rahix/avr-hal", rev="f84c0dff774c2292bc932b670955165161ecc7d1"}
ufmt = "*"

[dependencies.rust-arduino-helpers]
#path="../../rust-arduino-helpers"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="main"

[dependencies.rust-arduino-runtime]
#path="../../rust-arduino-helpers/rust-arduino-runtime"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="main"

[dependencies.cty]
git="https://github.com/mutantbob/cty.git"
branch="2022-Feb-avr"

[dependencies.cstr_core]
#version="*"
git="https://github.com/mutantbob/cstr_core.git"
#path="../../../vendor/cstr_core"
default-features=false

[build-dependencies]
bindgen="*"
cc="*"

[build-dependencies.arduino-build-helpers]
#path="../../rust-arduino-helpers/arduino-build-helpers"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="main"

[lib]
#crate-type=["staticlib"]
#crate-type=["rlib"]
