[package]
name = "neopixel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cty="*"  # doesn't compile on AVR
avr-hal-generic = {git="https://github.com/rahix/avr-hal", rev="f84c0dff774c2292bc932b670955165161ecc7d1"}
#atmega-hal = {git="https://github.com/rahix/avr-hal", rev="f84c0dff774c2292bc932b670955165161ecc7d1", features=["atmega328p"]}
rust-arduino-helpers = { path="../../rust-arduino-helpers"}
rust-arduino-runtime = { path="../../rust-arduino-helpers/rust-arduino-runtime"}
cty={path="../../../vendor/cty"}

[build-dependencies]
bindgen="*"
cc="*"
arduino-build-helpers = { path="../../rust-arduino-helpers/arduino-build-helpers"}
regex = "*"

[lib]
#crate-type=["staticlib"]
crate-type=["rlib"]
