[package]
name = "neopixel"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cty="*"  # doesn't compile on AVR
avr-hal-generic = {git="https://github.com/rahix/avr-hal", rev="f84c0dff774c2292bc932b670955165161ecc7d1"}
#atmega-hal = {git="https://github.com/rahix/avr-hal", rev="f84c0dff774c2292bc932b670955165161ecc7d1", features=["atmega328p"]}

[dependencies.rust-arduino-helpers]
#path="../../rust-arduino-helpers"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="main"

[dependencies.rust-arduino-runtime]
#path="../../rust-arduino-helpers/rust-arduino-runtime"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="main"

[dependencies.cty]
git="https://github.com/mutantbob/cty.git"
branch="2022-Feb-avr"

[build-dependencies]
bindgen="*"
cc="*"
regex = "*"

[build-dependencies.arduino-build-helpers]
#path="../../rust-arduino-helpers/arduino-build-helpers"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="main"

[lib]
#crate-type=["staticlib"]
crate-type=["rlib"]
