[package]
name = "neopixel"
version = "0.1.0"
edition = "2018"


[features]
board-selected=[]
atmega328p = [ "board-selected", "rust-arduino-helpers/atmega328p" ]
atmega2560 = [ "board-selected", "rust-arduino-helpers/atmega2560" ]


[dependencies]
 cty="*"
avr-hal-generic = {git="https://github.com/rahix/avr-hal", rev="f84c0dff774c2292bc932b670955165161ecc7d1"}

[dependencies.rust-arduino-helpers]
#path="../../rust-arduino-helpers"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="2022-mar-kludge"

[dependencies.rust-arduino-runtime]
#path="../../rust-arduino-helpers/rust-arduino-runtime"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="2022-mar-kludge"

[build-dependencies]
bindgen="*"
cc="*"
regex = "*"

[build-dependencies.arduino-build-helpers]
#path="../../rust-arduino-helpers/arduino-build-helpers"
git="https://github.com/mutantbob/rust-arduino-helpers.git"
branch="2022-mar-kludge"

[lib]
#crate-type=["staticlib"]
#crate-type=["rlib"]
